--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -8,13 +8,14 @@ $color-woodsmoke: #15181D;
 $color-shark: #1D2026;
 $color-gray: #575962;
 $color-boulder: #777777;
-$black : #1D2026;
-$white : #FFFFFF;
+$color-meadow: #14DC94;
+$color-salute: #2B2F37;
 
 // font size
 $font-size-12: 12px;
 $font-size-14: 14px;
 $font-size-18: 18px;
+$font-size-30: 30px;
 
 //font family
 $font-poppins: 'Poppins', sans-serif;
