--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -151,11 +151,13 @@ body {
 			.form-reserve{
 				margin-top: 40px;
 				.btn-add-new{
+					min-width: 117px;
 					background-color: $color-white;
 					color: $color-woodsmoke;
 					font-size: $font-size-14;
 					text-transform: uppercase;
 					box-shadow: 0px 3px 6px #000000FA;
+					height: 35px;
 				}
 				table.table{
 					th{
@@ -231,6 +233,7 @@ body {
 		border: 1px solid #343436;
 		color: $color-white;
 		opacity: .5;
+		height: 35px;
 	}
 }
 
