--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,700&display=swap');
+html, body{
+	height: 100%;
+}
 body {
 	font-family: 'Poppins', sans-serif !important;
 	font-size: 14px;
 	background: $color-shark;
-	overflow-x: hidden;
 }
 .head {
 	background: $color-black;
@@ -168,15 +170,20 @@ body {
 						border: {
 							top: none !important;
 							bottom: 1px solid $color-black;
-						} 
+						}
 					}
-					td{
-						padding: 0.75rem 0;
-						font-size: $font-size-14;
-						color: $color-white;
-						border: {
-							top: none !important;
-							bottom: 1px solid $color-black;
+					tbody{
+						tr{
+							td{
+								vertical-align: middle;
+								padding: 0.75rem 0;
+								font-size: $font-size-14;
+								color: $color-white;
+								border: {
+									top: none !important;
+									bottom: 1px solid $color-black;
+								}
+							}
 						}
 					}
 				}
@@ -187,6 +194,7 @@ body {
 		}
 	}
 	.tab-flex{
+		align-items: center;
 		display: flex;
 		.content-mid-img{
 			width: 50px;
@@ -218,13 +226,14 @@ body {
 	}
 }
 .btn-claim{
+	color: $color-green;
 	min-width: 117px;
 	background: transparent;
-	border: 1px solid #14DC94;
+	border: 1px solid $color-green;
 	border-radius: 4px;
 	padding: 4px 12px;
 	&:hover{
-		background: #14DC94;
+		background: $color-green;
 		color: $color-white;
 	}
 	&-value{
@@ -277,7 +286,7 @@ body {
 		}
 		.enter-money{
 			background: $color-woodsmoke;
-			padding: 6px 12px;
+			padding: 6px 25px;
 			width: 100%;
 			border: none;
 			border-radius: 0px;
@@ -295,7 +304,7 @@ body {
 			position: relative;
 			min-height: 38px;
 			background: $color-woodsmoke;
-			padding: 6px 12px;
+			padding: 6px 25px;
 			width: 100%;
 			border: none;
 			border-radius: 0px;
@@ -320,9 +329,12 @@ body {
 			img{
 				width: 14px;
 				position: absolute;
-				right: 16px;
+				right: 25px;
 				top: 21px;
 				cursor: pointer;
+			}
+			> span{
+				text-transform: none;
 			}
 		}
 		.btn-modal-add-new{
@@ -350,7 +362,7 @@ body {
 			position: absolute;
 			top: 16px;
 			background: transparent;
-			right: 16px;
+			right: 25px;
 			border: none;
 			padding: 0;
 			font-size: $font-size-14;
@@ -372,6 +384,7 @@ body {
 				.vfc-calendar{
 					background: $color-shark;
 					.vfc-content{
+						font-family: 'Poppins', sans-serif !important;
 						margin: 0 !important;
 						.vfc-dayNames {
 							span{
@@ -398,6 +411,10 @@ body {
 										border-radius: 0;
 									}
 								}
+								span.vfc-span-day.vfc-today{
+									background-color: #3366FF !important;
+									border-radius: 0 !important;
+								}
 							}
 						}
 					}
@@ -407,16 +424,19 @@ body {
 		}
 	}
 }
-.vfc-styles-conditional-class .vfc-main-container .vfc-navigation-buttons div .vfc-arrow-left,
-.vfc-styles-conditional-class .vfc-main-container .vfc-navigation-buttons div .vfc-arrow-right{
-	border-color: $color-white !important;
-}
-.vfc-styles-conditional-class .vfc-main-container .vfc-calendars-container .vfc-calendars .vfc-calendar div.vfc-content .vfc-week div.vfc-day span.vfc-span-day.vfc-today{
-	background-color: #3366FF !important;
-	border-radius: 0 !important;
+.vfc-styles-conditional-class{
+	.vfc-main-container{
+		.vfc-navigation-buttons{
+			div{
+				.vfc-arrow-left , .vfc-arrow-right{
+					border-color: $color-white !important;
+				}
+			}
+		}
+	}
 }
 .percent{
-	color: $color-meadow;
+	color: $color-green;
 }
 .pl-35{
 	padding-left: 35px;
@@ -453,5 +473,18 @@ body {
 	p {
 		font-size: $font-size-14;
 		font-weight : 300;
+	}
+}
+#ul-list-dot{
+	text-align: center;
+	.li-list-dot{
+		padding: 0 10px;
+		display: inline-block;
+		.dot-loading{
+			background: $color-white;
+			width: 12px;
+			height: 12px;
+			border-radius: 50%;
+		}
 	}
 }
