--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $color-shark: #1D2026;
 $color-gray: #575962;
 $color-boulder: #777777;
 $color-salute: #2B2F37;
+$color-blue: #3366FF;
 
 // font size
 $font-size-12: 12px;
