--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -49,12 +49,19 @@ body {
 		font-family: $font-poppins;
 	}
 	.est-content{
-		margin: 20px;
-		border-bottom: 2px solid $color-black;
+		margin: 10px;
+		background: $color-woodsmoke;
+		border-radius: 10px;
+		padding: 25px;
 	}
 	.change-number{
 		font-size: 26px;
 		color: $color-green;
+		font-family: $font-poppins;
+	}
+	.null-change-number{
+		font-size: 26px;
+		color: $color-white;
 		font-family: $font-poppins;
 	}
 	.card{
@@ -131,6 +138,12 @@ body {
 					padding-left: 20px;
 					line-height: 54px;
 				}
+				.address-in-content{
+					text-align: center;
+					border-left: 1px solid #000000;
+					padding: 4px 0 4px 10px;
+					margin-top: 12px;
+				}
 			}
 			.chart-line{
 				padding: 40px;
@@ -143,6 +156,10 @@ body {
 				}
 				.percent{
 					font-size: $font-size-18;
+				}
+				percent-null{
+					font-size: $font-size-18;
+					color: $color-white;
 				}
 				.est-value-change{
 					color: $color-white;
@@ -185,6 +202,17 @@ body {
 								border: {
 									top: none !important;
 									bottom: 1px solid $color-black;
+								}
+							}
+						}
+						.b-table-empty-row{
+							> td{
+								border-bottom: 0;
+								> div{
+									margin-top: 18px;
+									.empty-row{
+										font-size: $font-size-14;
+									}
 								}
 							}
 						}
@@ -262,6 +290,7 @@ body {
 		text-align: center;
 		background: $color-salute;
 		.title-popup{
+			font-size: $font-size-18;
 			padding-left: 15px;
 		}
 	}
@@ -272,6 +301,48 @@ body {
 		.text-label{
 			color: $color-boulder;
 			text-transform: uppercase;
+		}
+		.select-relative{
+			position: relative;
+			.select-wallet{
+				color: $color-white;
+				background: $color-woodsmoke;
+				padding: 6px 25px;
+				width: 100%;
+				border: none;
+				border-radius: 0px;
+				font-size: $font-size-18;
+				height: 55px;
+				&:focus{
+					outline: 0;
+					box-shadow: none;
+				}
+			}
+			> img{
+				width: 14px;
+				position: absolute;
+				right: 25px;
+				top: 21px;
+				cursor: pointer;
+			}
+		}
+		.line-horizontal{
+			width: 100%;
+			height: 0.12em;
+			background: $color-woodsmoke;
+			margin-bottom: 20px;
+		}
+		&-claim{
+			height: 600px;
+		}
+		.wrap-summary{
+			color: $color-white;
+			font-size: $font-size-14;
+			> div{
+				> label{
+					min-width: 150px;
+				}
+			}
 		}
 		.value-available{
 			font-size: $font-size-30;
@@ -361,6 +432,15 @@ body {
 			&:hover{
 				background: transparent;
 			}
+		}
+		.btn-claim{
+			padding: 10px 0;
+			background: $color-blue;
+			color: $color-white;
+			width: 100%;
+			border-radius: 0;
+			margin-top: 30px;
+			border: none;
 		}
 		.btn-position{
 			position: absolute;
@@ -464,6 +544,9 @@ body {
 .pr-35{
 	padding-right: 35px;
 }
+.pr-25{
+	padding-right: 25px;
+}
 .mb-20{
 	margin-bottom: 20px;
 }
@@ -477,7 +560,9 @@ body {
 	background-color: #1D2026;
 	height: 35px;
 }
-
+.pdr-0{
+	padding-right: 0;
+}
 .wallet-name {
 	border-bottom-left-radius: 4px;
     border-top-left-radius: 4px;
