--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -346,13 +346,13 @@ body {
 			}
 		}
 		.value-available{
-			font-size: $font-size-30;
-			padding: 20px 25px;
+			font-size: 26px;
+			padding: 20px 25px 16px 25px;
 			background: $color-salute;
 			width: 100%;
 			height: 80px;
 			border: none;
-			border-radius: 0px;
+			border-radius: 4px;
 			color: $color-white;
 			&:focus{
 				outline: none;
@@ -365,7 +365,7 @@ body {
 			padding: 6px 25px;
 			width: 100%;
 			border: none;
-			border-radius: 0px;
+			border-radius: 4px;
 			font-size: $font-size-18;
 			height: 55px;
 			&:focus {
@@ -383,7 +383,7 @@ body {
 			padding: 6px 25px;
 			width: 100%;
 			border: none;
-			border-radius: 0px;
+			border-radius: 4px;
 			height: 55px;
 			display: flex;
 			align-items: center;
