--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -616,6 +616,9 @@ body {
 .pdr-0{
 	padding-right: 0;
 }
+.pdr-10{
+	padding-right: 10px;
+}
 .wallet-name {
 	border-bottom-left-radius: 4px;
     border-top-left-radius: 4px;
