--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,7 +14,9 @@ $color-blue: #3366FF;
 // font size
 $font-size-12: 12px;
 $font-size-14: 14px;
+$font-size-16: 16px;
 $font-size-18: 18px;
+$font-size-24: 24px;
 $font-size-30: 30px;
 
 //font family
