--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -71,6 +71,9 @@ body {
 		}
 		.col-auto{
 			width: 30%;
+			@media screen and (max-width: 1366px){
+			 	width: 40%;
+			}
 			&:focus{
 				outline: 0;
 			}
@@ -118,6 +121,9 @@ body {
 			width: 70%;
 			background: $color-shark;
 			color: $color-white;
+			@media screen and (max-width: 1366px){
+			 	width: 60%;
+			}
 			&:hover{
 				outline: 0;
 			}div{
@@ -247,8 +253,11 @@ body {
 	}
 }
 .acronym-name{
-	min-width: 80px !important;
+	min-width: 130px !important;
 	color: $color-white;
+	@media screen and (max-width: 1366px){
+		min-width: 100px !important;
+	}
 	.name-el-money{
 		color: $color-boulder;
 		font-size: $font-size-12;
@@ -518,6 +527,19 @@ body {
 									&.vfc-hover:hover{
 										cursor: pointer;
 									}
+									&.vfc-disabled:hover {
+										cursor: no-drop !important;
+									}
+									&.vfc-today:hover {
+										cursor: no-drop !important;
+									}
+									&.vfc-today {
+										color: $color-white;
+									}
+								}
+								.vfc-marked {
+									background-color: transparent !important;
+									color: rgba(133, 133, 133, 0.2);
 								}
 								span.vfc-span-day.vfc-today{
 									background-color: $color-blue !important;
@@ -571,7 +593,7 @@ body {
 			border-radius: 0;
 		}
 	}
-	
+
 }
 .vfc-styles-conditional-class{
 	.vfc-main-container{
@@ -599,7 +621,7 @@ body {
 .pt-15 {
     padding-top: 15px;
 }
-    
+
 .mb-20{
 	margin-bottom: 20px;
 }
