--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -70,10 +70,6 @@ body {
 			min-height: calc(100vh - 100px);
 		}
 		.col-auto{
-			width: 30%;
-			@media screen and (max-width: 1366px){
-			 	width: 40%;
-			}
 			&:focus{
 				outline: 0;
 			}
@@ -118,12 +114,9 @@ body {
 			}
 		}
 		.tab-content{
-			width: 70%;
+			width: 50%;
 			background: $color-shark;
 			color: $color-white;
-			@media screen and (max-width: 1366px){
-			 	width: 60%;
-			}
 			&:hover{
 				outline: 0;
 			}div{
@@ -240,7 +233,7 @@ body {
 		}
 		.content-mid{
 			font-size: $font-size-16;
-			min-width: 125px;
+			min-width: 100px;
 			border-collapse: collapse;
 			.cost{
 				font-size: $font-size-12;
@@ -653,10 +646,47 @@ body {
 .wallet-address {
 	border-bottom-right-radius: 4px;
 	border-top-right-radius: 4px;
+	position: relative;
+	cursor: pointer;
+	min-width: 115px;
+	padding: 8px 12px;
 	p {
 		font-size: $font-size-14;
 		font-weight : 300;
 	}
+	> img {
+		width: 12px;
+	    height: 12px;
+	    position: absolute;
+	    right: 8px;
+	    top: 12px;
+	}
+}
+.wallet-option{
+	position: absolute;
+	top: 32px;
+	right: 0;
+	width: 216px;
+	height: auto;
+	z-index: 999;
+	color: $color-white;
+    display: flex;
+    flex-direction: column;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    .item-option{
+	    overflow: hidden;
+	    font-size: 14px;
+	    display: flex;
+	    height: 44px;
+	    align-items: center;
+	    position: relative;
+	    width: 100%;
+	    padding: 0 20px;
+	    &:hover{
+	    	background: $color-woodsmoke;
+	    }
+    }
 }
 #ul-list-dot{
 	padding: 0;
